--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -65,7 +65,7 @@
                         android:text="@{toolbarModel.title}"
                         android:textColor="@color/white"
                         android:textSize="16sp"
-                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas) || toolbarModel.title.equalsIgnoreCase(@string/settings)|| toolbarModel.title.equalsIgnoreCase(@string/helpline)) ? View.GONE : View.VISIBLE}"
+                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/edit_profile) || toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas) || toolbarModel.title.equalsIgnoreCase(@string/settings)|| toolbarModel.title.equalsIgnoreCase(@string/helpline)) ? View.GONE : View.VISIBLE}"
                         tools:text="Title" />
 
                     <ImageView
@@ -75,7 +75,7 @@
                         android:padding="@dimen/_5sdp"
                         android:transitionName="appLogo"
                         android:src="@drawable/ic_logo_splash_white"
-                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas)|| toolbarModel.title.equalsIgnoreCase(@string/settings)|| toolbarModel.title.equalsIgnoreCase(@string/helpline)) ? View.VISIBLE : View.GONE}" />
+                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/edit_profile) || toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas)|| toolbarModel.title.equalsIgnoreCase(@string/settings)|| toolbarModel.title.equalsIgnoreCase(@string/helpline)) ? View.VISIBLE : View.GONE}" />
 
                 </RelativeLayout>
 
@@ -145,6 +145,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/tvAboutUs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_regular"
+                    android:padding="@dimen/_10sdp"
+                    android:text="About Us"
+                    android:textColor="@color/text_privacy_policy"
+                    android:textSize="14sp" />
                 <TextView
                     android:id="@+id/tvPrivacyPolicy"
                     android:layout_width="wrap_content"
