--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -68,7 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_10sdp"
-                    android:background="@drawable/dark_bg_new_theme">
+                    android:background="@drawable/dark_bg_new_theme"
+                    android:paddingVertical="@dimen/_5sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/email_til"
@@ -81,15 +82,15 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etEmail"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
                             android:fontFamily="@font/opensans_regular"
                             android:inputType="textEmailAddress"
-                            android:translationY="-6dp"
-                            android:paddingHorizontal="@dimen/_10sdp"
+                            android:padding="@dimen/_10sdp"
                             android:text="@={vm.emailObservable}"
                             android:textColor="@color/white"
-                            android:textSize="16sp" />
+                            android:textSize="15sp"
+                            android:translationY="-5dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
                 </FrameLayout>
@@ -99,7 +100,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:background="@drawable/dark_bg_new_theme">
+                    android:background="@drawable/dark_bg_new_theme"
+                    android:paddingVertical="@dimen/_5sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/password_til"
@@ -112,15 +114,15 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/edPwd"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
                             android:fontFamily="@font/opensans_regular"
                             android:inputType="textPassword"
-                            android:translationY="-6dp"
-                            android:paddingHorizontal="@dimen/_10sdp"
+                            android:padding="@dimen/_10sdp"
                             android:text="@={vm.passwordObservable}"
                             android:textColor="@color/white"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:translationY="-5dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
                 </FrameLayout>
@@ -152,33 +154,34 @@
                         android:layout_height="match_parent"
                         android:layout_marginStart="@dimen/_10sdp"
                         android:gravity="center"
+                        android:visibility="gone"
                         app:ccp_defaultCode="91"
                         app:ccp_hideNameCode="true"
                         app:ccp_hidePhoneCode="true"
-                        app:ccp_textColor="@color/white"
+                        app:ccp_textColor="@android:color/transparent"
                         app:ccp_textSize="16sp" />
+
+                    <ImageView
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:src="@drawable/flag_india" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:fontFamily="@font/opensans_regular"
+                        android:padding="@dimen/_5sdp"
+                        android:text="IN +91"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
 
                     <View
                         android:layout_width="0.5dp"
                         android:layout_height="match_parent"
                         android:layout_marginStart="@dimen/_2sdp"
                         android:background="@color/grey_aaaaaa" />
-
-                    <androidx.appcompat.widget.AppCompatEditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_4sdp"
-                        android:background="@android:color/transparent"
-                        android:enabled="false"
-                        android:focusable="false"
-                        android:fontFamily="@font/opensans_regular"
-                        android:inputType="number"
-                        android:paddingVertical="@dimen/_10sdp"
-                        android:paddingStart="@dimen/_5sdp"
-                        android:text="+91"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/white"
-                        android:textSize="16sp" />
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/edPhoneNumber"
