--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,24 +9,31 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/settingsText"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:fontFamily="@font/opensans_bold"
-            android:text="@string/settings"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="@dimen/_4sdp">
+
+            <TextView
+                style="@style/openSemiBoldTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:padding="@dimen/_13sdp"
+                android:text="@string/settings"
+                android:textColor="#100F0F"
+                android:textSize="@dimen/_16ssp" />
+
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:elevation="@dimen/_3sdp"
-            app:cardBackgroundColor="@color/white">
+            android:layout_margin="@dimen/_18sdp"
+            app:cardCornerRadius="@dimen/_4sdp"
+            app:cardElevation="@dimen/_4sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,146 +44,142 @@
                     android:id="@+id/profileLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginBottom="@dimen/_5sdp"
-                    android:gravity="center_vertical"
+                    android:background="@color/white"
+                    android:gravity="center"
                     android:orientation="horizontal"
-                    android:paddingVertical="@dimen/_10sdp"
-                    android:paddingStart="@dimen/_15sdp">
+                    android:padding="@dimen/_8sdp"
+                    android:weightSum="2">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/icon"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:src="@drawable/ic_account_circle_black_24dp" />
+                    <ImageView
+                        android:layout_width="@dimen/_18sdp"
+                        android:layout_height="@dimen/_18sdp"
+                        android:src="@drawable/ic_account_circle_black_24dp"
+                        app:tint="@color/text_gray" />
 
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/profileText"
+                    <TextView
+                        style="@style/openRegularTextStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/opensans_regular"
+                        android:layout_weight="2"
+                        android:padding="@dimen/_8sdp"
                         android:text="@string/profile"
-                        android:textColor="@color/grey1"
-                        android:textSize="18sp" />
+                        android:textColor="@color/text_gray"
+                        android:textSize="@dimen/_16ssp" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="@dimen/_30sdp"
-                        android:layout_marginRight="@dimen/_5sdp"
                         android:padding="@dimen/_10sdp"
                         android:src="@drawable/ic_arrow_settings" />
+
                 </LinearLayout>
 
                 <View
-                    android:id="@+id/divider1"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/grey_divider_theme" />
+                    android:layout_height="@dimen/_1sdp"
+                    android:background="@color/viewColor" />
 
                 <LinearLayout
                     android:id="@+id/llLanguage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:background="@color/white"
+                    android:gravity="center"
                     android:orientation="horizontal"
-                    android:paddingVertical="@dimen/_15sdp"
-                    android:paddingStart="@dimen/_15sdp">
+                    android:padding="10dp"
+                    android:weightSum="2">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/icon1"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:src="@drawable/ic_language_black_24dp" />
+                    <ImageView
+                        android:layout_width="@dimen/_18sdp"
+                        android:layout_height="@dimen/_18sdp"
+                        android:layout_gravity="top"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:src="@drawable/ic_language"
+                        app:tint="@color/text_gray" />
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:orientation="vertical">
 
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/changeLanguageText"
-                            android:layout_width="wrap_content"
+                        <TextView
+                            style="@style/openRegularTextStyle"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:padding="@dimen/_8sdp"
                             android:text="@string/change_language"
-                            android:textColor="@color/grey1"
-                            android:textSize="18sp" />
+                            android:textColor="@color/text_gray"
+                            android:textSize="@dimen/_16ssp" />
 
-                        <androidx.appcompat.widget.AppCompatTextView
+                        <TextView
                             android:id="@+id/languageText"
-                            android:layout_width="wrap_content"
+                            style="@style/openRegularTextStyle"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_5sdp"
-                            android:fontFamily="@font/opensans_regular"
+                            android:paddingStart="@dimen/_8sdp"
+                            android:paddingEnd="@dimen/_8sdp"
+                            android:paddingBottom="@dimen/_8sdp"
                             android:text="English"
-                            android:textColor="@color/grey"
-                            android:textSize="13sp" />
+                            android:textColor="@color/text_gray"
+                            android:textSize="@dimen/_12ssp" />
                     </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="@dimen/_30sdp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginRight="@dimen/_5sdp"
                         android:padding="@dimen/_10sdp"
                         android:src="@drawable/ic_arrow_settings" />
+
                 </LinearLayout>
 
                 <View
-                    android:id="@+id/divider"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/grey_divider_theme" />
+                    android:layout_height="@dimen/_1sdp"
+                    android:background="@color/viewColor" />
 
                 <LinearLayout
                     android:id="@+id/llLogout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginBottom="@dimen/_5sdp"
-                    android:gravity="center_vertical"
+                    android:background="@color/white"
+                    android:gravity="center"
                     android:orientation="horizontal"
-                    android:paddingVertical="@dimen/_15sdp"
-                    android:paddingStart="@dimen/_15sdp">
+                    android:padding="10dp"
+                    android:weightSum="2">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/icon3"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:src="@drawable/ic_logout" />
+                    <ImageView
+                        android:layout_width="@dimen/_18sdp"
+                        android:layout_height="@dimen/_18sdp"
+                        android:src="@drawable/ic_logout"
+                        app:tint="@color/text_gray" />
 
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/logoutText"
+                    <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:fontFamily="@font/opensans_regular"
+                        android:padding="@dimen/_8sdp"
                         android:text="@string/logout"
-                        android:textColor="@color/grey1"
-                        android:textSize="18sp" />
+                        android:textColor="@color/text_gray"
+                        android:textSize="@dimen/_16ssp" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="@dimen/_30sdp"
-                        android:layout_marginRight="@dimen/_5sdp"
                         android:padding="@dimen/_10sdp"
                         android:src="@drawable/ic_arrow_settings" />
+
                 </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_1sdp"
+                    android:background="@color/viewColor" />
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
-
 
     </LinearLayout>
 
