--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,5 +41,8 @@
     <color name="text_color_language_disabled">#DF8083</color>
     <color name="card_bg_new_theme">#5A191C</color>
     <color name="btn_color_new_theme">#6F6B0F1D</color>
+    <color name="edittext_hint_dark_theme">#D4D3D4</color>
+    <color name="tint_929292">#929292</color>
+    <color name="viewColor">#E7E7E7</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#D4D3D4</color>
 </resources>
