--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <item name="android:ambientShadowAlpha">0.1</item>
-        <item name="android:spotShadowAlpha">0.1</item>
+        <item name="android:ambientShadowAlpha">0.2</item>
+        <item name="android:spotShadowAlpha">0.2</item>
         <item name="android:statusBarColor">#00000000</item>
         <item name="android:windowActivityTransitions">true</item>
     </style>
@@ -135,7 +135,7 @@
 
     <style name="TextLabelDark" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColorHint">@color/edittext_hint_dark_theme</item>
         <item name="android:textSize">16sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">@color/white</item>
