--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -40,7 +40,8 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/_15sdp">
+        android:paddingHorizontal="@dimen/_15sdp"
+        android:paddingTop="@dimen/_15sdp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -269,6 +270,7 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/onboarded_by"
                     android:textColor="@color/black"
+                    android:visibility="gone"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/framePanCardPhoto" />
@@ -278,6 +280,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
                     app:boxStrokeColor="@color/input_selector"
@@ -303,6 +306,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/onboarding_date"
                     app:boxStrokeColor="@color/input_selector"
@@ -328,6 +332,7 @@
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
+                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:background="@color/colorGrey1"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -341,6 +346,7 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/sales_executive"
+                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -354,6 +360,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
                     app:boxStrokeColor="@color/input_selector"
+                    android:visibility="gone"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -379,6 +386,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/phone_number"
                     app:boxStrokeColor="@color/input_selector"
+                    android:visibility="gone"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -401,6 +409,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
                     android:layout_marginTop="@dimen/_15sdp"
+                    android:visibility="gone"
                     android:background="@color/colorGrey1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -411,6 +420,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
+                    android:visibility="gone"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/area_head"
                     android:textColor="@color/black"
@@ -426,6 +436,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
                     app:boxStrokeColor="@color/input_selector"
+                    android:visibility="gone"
                     app:boxStrokeWidth="0.6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -447,6 +458,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/phone_number"
                     app:boxStrokeColor="@color/input_selector"
@@ -531,9 +543,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/choose_months"
+                    android:visibility="@{rb30Days.checked ? View.GONE : View.GONE}"
                     app:boxStrokeColor="@color/input_selector"
                     app:boxStrokeWidth="0.6dp"
-                    android:visibility="@{rb30Days.checked ? View.GONE : View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/blockingSystemLayout">
