--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -16,199 +16,198 @@
         <variable
             name="vm"
             type="com.transport.mall.ui.authentication.signup.SignUpVM" />
-
     </data>
 
-    <!-- <ScrollView
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:background="@color/white">-->
-
-    <LinearLayout
-        android:id="@+id/parent"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:animateLayoutChanges="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_15sdp"
-        tools:context=".ui.main.MainActivity">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_50sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@string/sign_up"
-            android:textColor="@color/white"
-            android:textSize="26sp" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/llExecutiveLogin"
+            android:id="@+id/parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:animateLayoutChanges="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/_15sdp"
+            android:paddingBottom="@dimen/_15sdp"
+            tools:context=".ui.main.MainActivity">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_50sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/sign_up"
+                android:textColor="@color/white"
+                android:textSize="26sp" />
 
-            <FrameLayout
+            <LinearLayout
+                android:id="@+id/llExecutiveLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:background="@drawable/dark_bg_new_theme"
-                android:paddingVertical="@dimen/_5sdp">
+                android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputLayout
+
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_regular"
-                    android:hint="@string/name_"
-                    android:theme="@style/TextLabelDark">
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:background="@drawable/dark_bg_new_theme"
+                    android:paddingVertical="@dimen/_5sdp">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edName"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/tilName"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:hint="@string/name_"
+                        android:theme="@style/TextLabelDark">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:fontFamily="@font/opensans_regular"
+                            android:inputType="textPersonName"
+                            android:padding="@dimen/_10sdp"
+                            android:text="@={vm.nameObervable}"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+                </FrameLayout>
+
+                <LinearLayout
+                    android:id="@+id/editlayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:background="@drawable/dark_bg_new_theme"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/edEmail">
+
+                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
+                        android:id="@+id/ccpCountryCode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_46sdp"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:gravity="center_vertical"
+                        android:visibility="gone"
+                        app:ccp_defaultCode="91"
+                        app:ccp_hideNameCode="true"
+                        app:ccp_hidePhoneCode="true"
+                        app:ccp_textColor="@android:color/transparent"
+                        app:ccp_textSize="16sp" />
+
+                    <ImageView
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:src="@drawable/flag_india" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/opensans_regular"
-                        android:inputType="textPersonName"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@={vm.nameObervable}"
+                        android:padding="@dimen/_5sdp"
+                        android:text="IN +91"
                         android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:translationY="-5dp" />
+                        android:textSize="16sp" />
+
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_2sdp"
+                        android:background="@color/grey" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/edPhoneNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="@dimen/_8sdp"
+                        android:background="@android:color/transparent"
+                        android:fontFamily="@font/opensans_regular"
+                        android:hint="@string/enter_mobile_number_mandatory"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:padding="@dimen/_10sdp"
+                        android:text="@={vm.phoneNumberObserver}"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/edittext_hint_dark_theme"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:hint="@string/email"
+                    android:theme="@style/TextLabel"
+                    android:visibility="gone">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:text="@={vm.emailObservable}"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-            </FrameLayout>
+            </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/editlayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:background="@drawable/dark_bg_new_theme"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edEmail">
+                android:orientation="vertical">
 
-                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
-                    android:id="@+id/ccpCountryCode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_46sdp"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:gravity="center_vertical"
-                    android:visibility="gone"
-                    app:ccp_defaultCode="91"
-                    app:ccp_hideNameCode="true"
-                    app:ccp_hidePhoneCode="true"
-                    app:ccp_textColor="@android:color/transparent"
-                    app:ccp_textSize="16sp" />
-
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:src="@drawable/flag_india" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:fontFamily="@font/opensans_regular"
-                    android:padding="@dimen/_5sdp"
-                    android:text="IN +91"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-                <View
-                    android:layout_width="0.5dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/_2sdp"
-                    android:background="@color/grey" />
-
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/edPhoneNumber"
+                <Button
+                    android:id="@+id/btnSignUp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:fontFamily="@font/opensans_regular"
-                    android:hint="@string/enter_mobile_number_mandatory"
-                    android:layout_marginVertical="@dimen/_8sdp"
-                    android:inputType="number"
-                    android:maxLength="10"
-                    android:padding="@dimen/_10sdp"
-                    android:text="@={vm.phoneNumberObserver}"
+                    android:layout_height="@dimen/_44sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/btn_selector_new_theme"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="@string/sign_up"
+                    android:textAllCaps="false"
+                    android:textColor="@color/btn_text_color_newtheme"
+                    android:textSize="18sp" />
+
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_44sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/transparent_btn_selector"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="@string/login"
+                    android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
+
             </LinearLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:hint="@string/email"
-                android:theme="@style/TextLabel"
-                android:visibility="gone">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:text="@={vm.emailObservable}"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/btnSignUp"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_44sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/btn_selector_new_theme"
-                android:fontFamily="@font/opensans_bold"
-                android:text="@string/sign_up"
-                android:textAllCaps="false"
-                android:textColor="@color/btn_text_color_newtheme"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_44sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/transparent_btn_selector"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="@string/login"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:layout_height="0dp"
+                android:layout_weight="2" />
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2" />
-
-    </LinearLayout>
-    <!--    </ScrollView>-->
+    </ScrollView>
 </layout>
