--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -66,9 +66,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:drawablePadding="@dimen/_2sdp"
-                        android:fontFamily="@font/opensans_semibold"
+                        android:fontFamily="@font/opensans_regular"
                         android:text="@{userModel.ownerName}"
-                        android:textColor="@color/black"
+                        android:textColor="@color/text_gray"
                         android:textSize="16sp"
                         app:drawableEndCompat="@drawable/ic_edit_black"
                         tools:text="Profile Name" />
