--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -152,7 +152,9 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/default_btn_selector"
                     android:fontFamily="@font/opensans_regular"
-                    android:padding="@dimen/_10sdp"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:paddingVertical="@dimen/_5sdp"
+                    android:paddingRight="@dimen/_5sdp"
                     android:text="About Us"
                     android:textColor="@color/text_privacy_policy"
                     android:textSize="15sp" />
@@ -162,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/default_btn_selector"
                     android:fontFamily="@font/opensans_regular"
-                    android:padding="@dimen/_10sdp"
+                    android:padding="@dimen/_5sdp"
                     android:text="@string/privacy_policy"
                     android:textColor="@color/text_privacy_policy"
                     android:textSize="15sp" />
@@ -173,7 +175,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/default_btn_selector"
                     android:fontFamily="@font/opensans_regular"
-                    android:padding="@dimen/_10sdp"
+                    android:padding="@dimen/_5sdp"
                     android:text="@string/terms_and_conditions"
                     android:textColor="@color/text_privacy_policy"
                     android:textSize="15sp" />
