--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -20,7 +20,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
 
         <LinearLayout
             android:id="@+id/parent"
@@ -38,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_50sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/sign_up"
                 android:textColor="@color/white"
@@ -57,29 +58,31 @@
                     android:layout_marginHorizontal="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:background="@drawable/dark_bg_new_theme"
-                    android:paddingVertical="@dimen/_5sdp">
+                    android:paddingVertical="@dimen/_8sdp">
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/tilName"
+                    <!--                    <com.google.android.material.textfield.TextInputLayout-->
+                    <!--                        android:id="@+id/tilName"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:fontFamily="@font/opensans_regular"-->
+                    <!--                        android:hint="@string/name"-->
+                    <!--                        android:theme="@style/TextLabelDark">-->
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:fontFamily="@font/opensans_regular"
-                        android:hint="@string/name_"
-                        android:theme="@style/TextLabelDark">
+                        android:hint="@string/name"
+                        android:inputType="textPersonName"
+                        android:padding="@dimen/_10sdp"
+                        android:text="@={vm.nameObervable}"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/edittext_hint_dark_theme"
+                        android:textSize="16sp" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/edName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
-                            android:fontFamily="@font/opensans_regular"
-                            android:inputType="textPersonName"
-                            android:padding="@dimen/_10sdp"
-                            android:text="@={vm.nameObervable}"
-                            android:textColor="@color/white"
-                            android:textSize="16sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
+                    <!--                    </com.google.android.material.textfield.TextInputLayout>-->
                 </FrameLayout>
 
                 <LinearLayout
